[package]
name = "simple-nft-module"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
homepage = "sovereign.xyz"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
borsh = { workspace = true, features = ["rc"] }
serde = { workspace = true }

sov-modules-api = { path = "../../module-system/sov-modules-api" }
sov-state = { path = "../../module-system/sov-state" }

clap = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
jsonrpsee = { workspace = true, features = ["macros", "client-core", "server"], optional = true }

[dev-dependencies]
sov-rollup-interface = { path = "../../rollup-interface" }
tempfile = { workspace = true }
simple-nft-module = { version = "*", features = ["native"], path = "." }
sov-prover-storage-manager = { path = "../../full-node/sov-prover-storage-manager", features = ["test-utils"] }


[features]
default = []
native = ["sov-state/native", "sov-modules-api/native", "jsonrpsee", "schemars", "serde_json", "clap"]
test = ["native"]
