[package]
name = "sov-ethereum"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
readme = "README.md"
resolver = "2"

[dependencies]
anyhow = { workspace = true }
jsonrpsee = { workspace = true, features = ["http-client", "server"] }
sov-rollup-interface = { path = "../../rollup-interface" }

sov-evm = { path = "../../module-system/module-implementations/sov-evm" }
demo-stf = { path = "../../examples/demo-stf", features = ["native"] }
sov-modules-api = { path = "../../module-system/sov-modules-api" }
const-rollup-config = { path = "../../examples/const-rollup-config" }
celestia = { path = "../../adapters/celestia", features = ["native"] }

borsh = { workspace = true }
serde_json = { workspace = true }

reth-primitives = { workspace = true }
reth-rpc = { workspace = true }

ethers = { workspace = true }

[dev-dependencies]
sov-rollup-interface = { path = "../../rollup-interface", features = ["mocks"] }
tokio = { workspace = true }


[features]
default = []
experimental = ["demo-stf/experimental", "sov-evm/experimental"]
native = ["demo-stf/native", "sov-evm/native"]