[package]
name = "sov-sequencer"
authors = { workspace = true }
description = "A simple implementation of a sequencer for Sovereign SDK rollups"
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
readme = "README.md"
resolver = "2"


[dependencies]

anyhow = { workspace = true }
borsh = { workspace = true }
hex = { workspace = true }
jsonrpsee = { workspace = true, features = ["client", "server"] }
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
sov-rollup-interface = { path = "../../rollup-interface", version = "0.2" }

[dev-dependencies]
async-trait = { workspace = true }
sov-rollup-interface = { path = "../../rollup-interface", features = ["mocks", "native"] }
tokio = { workspace = true }
