[package]
name = "sov-stf-runner"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
readme = "README.md"
resolver = "2"

[dependencies]
anyhow = { workspace = true }
borsh = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
jsonrpsee = { workspace = true, features = ["http-client", "server"] }
tokio = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }
futures = "0.3"
tracing-subscriber = "0.3.17"

sov-db = { path = "../db/sov-db" }
sov-rollup-interface = { path = "../../rollup-interface", version = "0.1" }
sov-state = { path = "../../module-system/sov-state", version = "0.1"}
sov-modules-api = { path = "../../module-system/sov-modules-api", version = "0.1" }
jupiter = { path = "../../adapters/celestia" }

[dev-dependencies]
tempfile = { workspace = true }
rand = { workspace = true }

sov-election = { path = "../../module-system/module-implementations/examples/sov-election", default-features = false }
sov-sequencer-registry = { path = "../../module-system/module-implementations/sov-sequencer-registry", default-features = false }
sov-bank = { path = "../../module-system/module-implementations/sov-bank", default-features = false }
sov-modules-stf-template = { path = "../../module-system/sov-modules-stf-template" }
sov-value-setter = { path = "../../module-system/module-implementations/examples/sov-value-setter", default-features = false }
sov-accounts = { path = "../../module-system/module-implementations/sov-accounts", default-features = false }
