[package]
name = "sov-stf-runner"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
readme = "README.md"
resolver = "2"

[dependencies]
anyhow = { workspace = true }
borsh = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
jsonrpsee = { workspace = true, features = ["http-client", "server"] }
tokio = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }
futures = "0.3"
tracing-subscriber = "0.3.17"

sov-db = { path = "../db/sov-db", version = "0.2", optional = true }
sov-rollup-interface = { path = "../../rollup-interface", version = "0.2" }
sov-state = { path = "../../module-system/sov-state", version = "0.2" }
sov-modules-api = { path = "../../module-system/sov-modules-api", version = "0.2" }
sov-celestia-adapter = { path = "../../adapters/celestia", version = "0.2" }

[dev-dependencies]
tempfile = { workspace = true }
rand = { workspace = true }

sov-sequencer-registry = { path = "../../module-system/module-implementations/sov-sequencer-registry", features = ["native"] }
sov-bank = { path = "../../module-system/module-implementations/sov-bank", features = ["native"] }
sov-modules-stf-template = { path = "../../module-system/sov-modules-stf-template", features = ["native"] }
sov-value-setter = { path = "../../module-system/module-implementations/examples/sov-value-setter", features = ["native"] }
sov-accounts = { path = "../../module-system/module-implementations/sov-accounts", features = ["native"] }

[features]
default = []
native = [
    "sov-db",
    "sov-celestia-adapter/native",
    "sov-sequencer-registry/native",
    "sov-bank/native",
    "sov-state/native",
    "sov-modules-api/native",
]
