[package]
name = "sov-module-schemas"
description = "A dummy crate that stores as files the JSON Schemas for all Sovereign modules"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

version = { workspace = true }
readme = "README.md"
resolver = "2"
publish = false

[build-dependencies]
sov-modules-api = { path = "../sov-modules-api" }
sov-mock-da = { path = "../../adapters/mock-da", features = ["native"] }
sov-mock-zkvm = { path = "../../adapters/mock-zkvm" }

# Modules
sov-accounts = { path = "../module-implementations/sov-accounts", features = ["native"] }
sov-bank = { path = "../module-implementations/sov-bank", features = ["native"] }
sov-prover-incentives = { path = "../module-implementations/sov-prover-incentives", features = ["native"] }
sov-sequencer-registry = { path = "../module-implementations/sov-sequencer-registry", features = ["native"] }
sov-evm = { path = "../module-implementations/sov-evm", features = ["experimental"] }
sov-value-setter = { path = "../module-implementations/examples/sov-value-setter", features = ["native"] }
